--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Yantramanav:wght@300&display=swap");
+
 *,
 *::before,
 *::after {
@@ -13,102 +15,185 @@ html {
 }
 
 body {
-  background-color: rgb(210, 186, 186);
+  width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
 }
 
-.todo-list-container {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(244, 238, 238);
-  width: 50%;
-  min-width: 30rem;
-  height: auto;
-  padding: 20px 0 0 0;
-  box-shadow: 0 4px 8px 0 rgba(31, 30, 30, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border: 1px solid rgba(59, 57, 57, 0.18);
-  border-radius: 0.5rem;
+.wrapper {
+  width: 50rem;
+  margin-left: 7rem;
+  margin-top: 90px;
+  border-radius: 10px;
+  font-family: "Yantramanav", sans-serif;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.tasks {
+header {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: space-between;
-  border-bottom: 1px solid #5c5c5c;
-  padding: 1rem 2rem;
+  font-size: 30px;
+  font-weight: 600;
+  height: 60px;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-.main-header {
-  margin: 0;
+.listElements {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
 }
 
-.add-item {
-  background: none;
-  outline: none;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
-  width: 100%;
-  height: 4rem;
-  border: none;
-}
-
-.add-item::placeholder {
-  font-style: italic;
-  letter-spacing: 0.1rem;
-}
-
-.enter-button {
-  transform: rotate(90deg);
-  border: none;
-  background: none;
-}
-
-.checkbox {
-  width: 2rem;
-  height: 2rem;
-}
-
-.description {
-  margin: 0;
-  padding: 1.6rem 2.1rem 0 2rem;
-  width: 100%;
-  resize: none;
-  background: none;
-  border: none;
-}
-
-.enter-button,
-.task-button,
-.clear-tasks {
-  padding: 0.5rem;
-  font-size: 1.5rem;
-  border: none;
-  color: #414141;
-  background: none;
-}
-
-.clear-completed {
-  background: #a8a5a5;
-  margin: 0;
-  width: 100%;
-  height: 50px;
-  color: #414141;
-  border: none;
-}
-
-.task-button:hover .trash.alternate {
+.fas {
   color: rgb(139, 137, 137);
 }
 
-.clear-completed:hover,
-.clear:hover i,
-.enter-button:hover .level.down {
+.trash {
+  display: none;
+}
+
+.no-outline {
+  border: none;
+  outline-width: 0;
+}
+
+header span {
+  font-size: 30px;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.inputField {
+  display: flex;
+  width: 100%;
+  height: 60px;
+}
+
+input {
+  background-color: transparent;
+  border: 0 solid;
+}
+
+.inputField #input-box {
+  height: 100%;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  padding-left: 10px;
+}
+
+.inputField #input-box::placeholder {
+  font-style: italic;
+}
+
+.inputField span {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.center-items {
+  align-items: center;
+}
+
+.list-group-1 {
+  width: 100%;
+  height: 60%;
+}
+
+.task-description {
+  margin-left: 10px;
+}
+
+.edit-input {
+  display: none;
+  margin-left: 10px;
+  height: 40px;
+  width: 70%;
+}
+
+.todoList {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+
+.clear-all-completed {
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+
+.text-line {
+  text-decoration: line-through;
+}
+
+.clear-all-completed:hover {
+  color: rgb(238, 238, 238);
+}
+
+hr {
+  color: rgb(78, 78, 78);
+  width: 100%;
+}
+
+.todoList li {
+  display: flex;
+  position: relative;
+  list-style: none;
+  height: 60px;
+  margin-bottom: 8px;
+  font-weight: 500;
+  padding: 10px;
+  align-items: center;
+  width: 100%;
+}
+
+.footer > span {
+  font-size: 20px;
   font-weight: 700;
-  color: rgb(111, 107, 107);
+}
+
+.todoList li span {
+  position: absolute;
+  right: 0;
+  width: 20px;
+  cursor: pointer;
+}
+
+.d-height {
+  height: 50px;
+  padding-right: 9px;
+  padding-left: 9px;
+  border-bottom: 1px solid #d9d1d1;
+}
+
+.todo-cont {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  font-weight: 100;
+}
+
+.check-box {
+  margin-right: 4px;
+}
+
+.footer {
+  display: flex;
+  width: 100%;
+  height: 60px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(199, 197, 197);
 }
