make changes recommended by the reviewer

--- a/src/style.css
+++ b/src/style.css
@@ -110,6 +110,9 @@ input {
 
 .task-description {
   margin-left: 10px;
+  font-weight: 700;
+  font-size: 15px;
+  color: black;
 }
 
 .edit-input {
